--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
 
     implementation 'com.jakewharton:butterknife:8.5.1'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
     implementation 'com.android.support:support-v4:28.0.0'
