--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,11 +26,8 @@ dependencies {
     implementation 'com.android.support:support-vector-drawable:28.0.0'
     implementation 'com.google.firebase:firebase-core:16.0.1'
     // FirebaseUI
-    implementation 'com.firebaseui:firebase-ui-firestore:3.1.3'
+    implementation 'com.google.firebase:firebase-database:16.0.1'
     implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
-
-    implementation 'com.jakewharton:butterknife:8.5.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
     implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
