--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,9 @@ dependencies {
     implementation 'com.android.support:support-vector-drawable:28.0.0'
     implementation 'com.google.firebase:firebase-core:16.0.1'
     // FirebaseUI
+
     implementation 'com.google.firebase:firebase-database:16.0.1'
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
 
 
