--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <!--
@@ -16,7 +15,6 @@
          location permissions for the 'MyLocation' functionality. 
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
 
     <application
         android:allowBackup="true"
@@ -67,14 +65,16 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
-        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+            android:label="@string/title_activity_maps" />
 
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
 
         <!-- Broadcast receiver declaration in manifest file and make sure to enable it -->
         <receiver
-            android:name="com.project.safegroup.DetectionWifi.InternetConnector_Receiver"
-            android:enabled="true" >
+            android:name=".DetectionWifi.InternetConnector_Receiver"
+            android:enabled="true">
             <intent-filter>
 
                 <!-- Intent filters for broadcast receiver -->
@@ -84,6 +84,7 @@
             </intent-filter>
         </receiver>
 
+        <activity android:name=".WifiActivity"></activity>
     </application>
 
 </manifest>
